2014-02-09  Bogdan Cristea <cristeab@users.sourceforge.net>
	* itpp/base/bessel/gamma.cpp, itpp/base/itcompat.h,
	itpp/srccode/audiofile.cpp, itpp/srccode/audiosample.h,
	itpp/srccode/pnm.cpp: fixed compilation warnings on MacOsX 10.9. Unit tests
	don't pass on MacOsX 10.9, possible issue with vec string parser (bug #238).
	
2014-02-09  Bogdan Cristea <cristeab@users.sourceforge.net>
	* itpp/CMakeLists.txt: fixed installation path issues on 64 bits systems
	(bug #236)

2013-12-01  Bogdan Cristea <cristeab@users.sourceforge.net>
	* itpp/comm/multilateration.cpp: memcpy is replaced by memmove when moving
	overlapping data (bug #235)

2013-11-17  Bogdan Cristea <cristeab@users.sourceforge.net>
	* itpp/comm/punct_convcode.cpp: add check for empty puncturing matrix (bug
	#234). Thanks to Gilbert Forkel for providing the patch.

2013-09-14  Bogdan Cristea <cristeab@users.sourceforge.net>
	* CMakeLists.txt: incremented cmake version number to 2.8.11 due to issues
	on previous releases that do not allow to detect external libraries (BUG
	#231)

2013-08-03  Bogdan Cristea <cristeab@users.sourceforge.net>
	* itpp-config.cmake.in: add external libraries when using --libs options

2013-08-03  Bogdan Cristea <cristeab@users.sourceforge.net>
	* gtests/operators_test.cpp, itpp/base/operators.cpp, itpp/base/operators.h:
	add multiply operator between cvec and vec

2013-07-16  Bogdan Cristea <cristeab@users.sourceforge.net>
	* gtests/operators_test.cpp, itpp/base/operators.cpp, itpp/base/operators.h:
	add plus/minus operators between cvec and vec

2013-07-04  Bogdan Cristea <cristeab@users.sourceforge.net>
	* cmake/Modules/FindBLAS.cmake, cmake/Modules/FindLAPACK.cmake,
	doc/local/installation.doc: add support for detecting itpp-external compiled
	as static libraries

2013-07-03  Bogdan Cristea <cristeab@users.sourceforge.net>
	* doc/local/installation.doc: add install instructions with cmake using external
	libraries without being root
